# asv_gazebo_UL

./: .gitignore  README.md
asv_description/: CMakeLists.txt  package.xml
asv_description/config/: joint_names.yaml  ros_gz_bridge.yaml
asv_description/hooks/: asv_description.sh.in
asv_description/launch/: display.launch.xml  gazebo_empty_world.launch.py  nbpark_world.launch.py  syney_world.launch.py
asv_description/rviz/: urdf_config.rviz
asv_description/urdf/: asv_collision.xacro  asv_gazebo_thruster_config.xacro  asv_loyola.csv  asv_loyola.urdf.xacro  base_asv.xacro
asv_description/urdf/components/: asv_camera.xacro  asv_gps.xacro  asv_imu.xacro  asv_p3d.xacro  asv_planar_lidar.xacro
asv_description/urdf/dynamics/: asv_gazebo_dynamics_plugin.xacro
vrx_gz/launch/: competition.launch.py
vrx_gz/worlds/: nbpark.sdf  sydney_regatta.sdf
